src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_opa1_csq@3-193332833-G-A.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
snapshot_kind: text
---
- allele:
    Alt:
      alternative: A
  consequences:
    - splice_region_variant
    - splice_donor_region_variant
    - intron_variant
  putative_impact: low
  gene_symbol: OPA1
  gene_id: "HGNC:8140"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_130837.3
  feature_biotype:
    - coding
    - mane_select
  rank:
    ord: 3
    total: 30
  hgvs_g: g.193332833G>A
  hgvs_c: c.351+3G>A
  hgvs_p: p.?
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: 3
  strand: 1
  messages: ~
