src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_opa1_csq@3-193332836-C-A.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: A
  consequences:
    - splice_region_variant
    - splice_donor_region_variant
    - intron_variant
  putative_impact: low
  gene_symbol: OPA1
  gene_id: "HGNC:8140"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_130837.3
  feature_biotype:
    - coding
    - mane_select
  rank:
    ord: 3
    total: 30
  hgvs_g: g.193332836C>A
  hgvs_c: c.351+6C>A
  hgvs_p: p.?
  cdna_pos:
    ord: 521
    total: 6429
  cds_pos:
    ord: 351
    total: 3048
  protein_pos: ~
  distance: 6
  strand: 1
  messages: ~
