src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_opa1_csq@3-193332839-G-A.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: A
  consequences:
    - coding_transcript_intron_variant
  putative_impact: modifier
  gene_symbol: OPA1
  gene_id: "HGNC:8140"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_130837.3
  feature_biotype:
    - coding
  feature_tags:
    - mane_select
    - ref_seq_select
  rank:
    ord: 3
    total: 30
  hgvs_g: g.193332839G>A
  hgvs_n: n.521+9G>A
  hgvs_c: c.351+9G>A
  hgvs_p: p.?
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: 9
  strand: 1
  messages: ~
