src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_ttn_transcript_picking_reporting@2-179631246-G-A-false-false.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: A
  consequences:
    - stop_gained
  putative_impact: HIGH
  gene_symbol: TTN
  gene_id: "HGNC:12403"
  feature_type:
    SoTerm:
      term: Transcript
  feature_id: NM_001267550.2
  feature_biotype:
    - Coding
    - ManeSelect
  rank:
    ord: 41
    total: 363
  hgvs_t: c.9565C>T
  hgvs_p: p.Q3189*
  tx_pos:
    ord: 9790
    total: 109224
  cds_pos:
    ord: 9565
    total: 107976
  protein_pos:
    ord: 3189
    total: 35992
  distance: 0
  strand: -1
  messages: ~
